Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26080

SHOW GRANTS does not quote role names properly for DEFAULT ROLE

    XMLWordPrintable

Details

    Description

      I noticed that MDEV-20076 is fixed already.
      However, this is still minor issue left for SET DEFAULT ROLE

      MariaDB [(none)]> show grants for 'exploit'@'host';
      +-------------------------------------------------------------------------------------------------------------------------------------------------------------+
      | Grants for exploit@host |
      +-------------------------------------------------------------------------------------------------------------------------------------------------------------+
      | GRANT `role-exploit` TO `exploit`@`host` |
      | GRANT USAGE ON *.* TO `exploit`@`host` IDENTIFIED BY PASSWORD '*' WITH MAX_STATEMENT_TIME 15.000000 |
      | SET DEFAULT ROLE role-exploit FOR 'exploit'@'host'
      

      If copy-pasted as-is, the last line gets a syntax error.
      Can you update it so when showing grants, all of them are properly quoted?
      SHOW GRANTS does not quote role names properly for DEFAULT ROLE

      Attachments

        Issue Links

          Activity

            People

              anel Anel Husakovic
              muhammad.irfan Muhammad Irfan
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10m
                  10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.