MDEV-26080: SHOW GRANTS does not quote role names properly for DEFAULT ROLE

- Used single quotes, back quotes are used with commit
fafb35ee517f309d9e507f6e3908caca5d8cd257 in 10.3 and will be changed.

Reviewed by: serg@mariadb.org